--- a/productos/velas-bengalas.html
+++ b/productos/velas-bengalas.html
@@ -108,97 +108,69 @@
         </ul>
 
     </nav>
-    <div class="row row-cols-1 row-cols-md-3 g-4">
-        <div class="col">
-            <div class="card h-100">
-                <img src="/img/velas/0820151814093.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">bengala con brillo</h5>
+    <div class="row row-cols-1 row-cols-md-4 g-4">
 
-                </div>
-
-            </div>
-        </div>
-        <div class="col">
-            <div class="card h-100">
-                <img src="/img/velas/820151814116.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">bengala con brillo</h5>
-
-                </div>
+    </div>
+    <div class="col">
+        <div class="card h-100">
+            <img src="/img/velas/VF015RJ.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">bengala con brillo </h5>
 
             </div>
-        </div>
-        <div class="col">
-            <div class="card h-100">
-                <img src="/img/velas/0820151814123.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">bengala con brillo </h5>
 
-                </div>
+        </div>
+    </div>
+    <div class="col">
+        <div class="card h-100">
+            <img src="/img/velas/VF015TQ.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">bengala con brillo </h5>
 
             </div>
-        </div>
-        <div class="col">
-            <div class="card h-100">
-                <img src="/img/velas/VF015RJ.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">bengala con brillo </h5>
 
-                </div>
+        </div>
+    </div>
+    <div class="col">
+        <div class="card h-100">
+            <img src="/img/velas/VF015BL.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">bengala con brillo </h5>
 
             </div>
-        </div>
-        <div class="col">
-            <div class="card h-100">
-                <img src="/img/velas/VF015TQ.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">bengala con brillo </h5>
 
-                </div>
+        </div>
+    </div>
+    <div class="col">
+        <div class="card h-100">
+            <img src="/img/velas/VF015FC.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">bengala con brillo </h5>
 
             </div>
-        </div>
-        <div class="col">
-            <div class="card h-100">
-                <img src="/img/velas/VF015BL.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">bengala con brillo </h5>
 
-                </div>
+        </div>
+    </div>
+    <div class="col">
+        <div class="card h-100">
+            <img src="/img/velas/VF015PL.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">bengala con brillo </h5>
 
             </div>
-        </div>
-        <div class="col">
-            <div class="card h-100">
-                <img src="/img/velas/VF015FC.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">bengala con brillo </h5>
 
-                </div>
+        </div>
+    </div>
+    <div class="col">
+        <div class="card h-100">
+            <img src="/img/velas/VF015VT.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">bengala con brillo </h5>
 
             </div>
+
         </div>
-        <div class="col">
-            <div class="card h-100">
-                <img src="/img/velas/VF015PL.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">bengala con brillo </h5>
-
-                </div>
-
-            </div>
-        </div>
-        <div class="col">
-            <div class="card h-100">
-                <img src="/img/velas/.VF015VTjpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">bengala con brillo </h5>
-
-                </div>
-
-            </div>
-        </div>
+    </div>
 
 
 
