--- a/productos/cotillon-carioca.html
+++ b/productos/cotillon-carioca.html
@@ -113,7 +113,7 @@
 
         <div class="col">
             <div class="card h-100">
-                <img src="/img/carioca/GUS021.jpg" class="card-img-top" alt="...">
+                <img src="/img/carioca/RM1127.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">bengala con brillo </h5>
 
@@ -143,7 +143,7 @@
         </div>
         <div class="col">
             <div class="card h-100">
-                <img src="/img/velas/VF015FC.jpg" class="card-img-top" alt="...">
+                <img src="/img/carioca/RM1255.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">bengala con brillo </h5>
 
